--- a/app/src/main/res/layout/fragment_door.xml
+++ b/app/src/main/res/layout/fragment_door.xml
@@ -11,16 +11,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="16dp"
         android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cam_video"
-            android:visibility="visible"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:paddingHorizontal="2dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent">
@@ -33,13 +32,12 @@
                 android:contentDescription="@string/img_des"
                 android:scaleType="centerCrop"
                 android:src="@drawable/int_test"
-                android:visibility="visible"
                 app:layout_constraintBaseline_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <ImageView
-                android:visibility="invisible"
                 android:id="@+id/favorite"
+                android:visibility="invisible"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:contentDescription="@string/img_des"
@@ -49,6 +47,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
+                android:id="@+id/play_button"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="70dp"
@@ -66,8 +65,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="-10dp"
-            android:layout_marginBottom="8dp"
             android:background="@drawable/white_back_rounded_corner"
             android:paddingHorizontal="16dp"
             android:paddingVertical="21dp"
@@ -84,7 +81,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/intercom"
+                    android:id="@+id/door_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="-3dp"
@@ -94,7 +91,8 @@
                     android:textSize="17sp" />
 
                 <TextView
-                    android:id="@+id/network"
+                    android:visibility="invisible"
+                    android:id="@+id/status_network"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/circe_regular"
@@ -105,6 +103,7 @@
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/door_locker"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:contentDescription="@string/img_des"
