--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="network_color">#999999</color>
     <color name="settings_color">#BBBBBB</color>
     <color name="app_background">#F6F6F6</color>
+    <color name="app_background_splash">#F0F0F0</color>
 </resources>
