--- a/app/src/main/res/layout/fragment_cameras.xml
+++ b/app/src/main/res/layout/fragment_cameras.xml
@@ -8,8 +8,7 @@
     android:orientation="vertical"
     android:paddingStart="21dp"
     android:paddingEnd="21dp"
-    android:background="@color/app_background"
-    tools:context=".CamerasFragment">
+    android:background="@color/app_background">
 
     <TextView
         android:id="@+id/room_name"
@@ -60,16 +59,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/play_button"
-            android:contentDescription="@string/img_des"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="70dp"
-            android:layout_marginEnd="160dp"
-            android:src="@drawable/play_button"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="190dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/play_button"
+                android:contentDescription="@string/img_des"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/play_button"/>
+
+        </LinearLayout>
 
         <View
             android:id="@+id/view"
