--- a/app/src/main/res/layout/fragment_door.xml
+++ b/app/src/main/res/layout/fragment_door.xml
@@ -64,16 +64,24 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/white_back_rounded_corner"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="21dp"
             app:layout_constraintTop_toBottomOf="@+id/cam_video"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent">
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@drawable/bottom_rounded_corner"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -82,7 +90,6 @@
                     android:id="@+id/door_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="-3dp"
                     android:fontFamily="@font/circe_regular"
                     android:text="@string/intercom"
                     android:textColor="@color/text_color"
@@ -104,6 +111,8 @@
                 android:id="@+id/door_locker"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="24dp"
                 android:contentDescription="@string/img_des"
                 android:src="@drawable/lock_on"
                 app:layout_constraintEnd_toEndOf="parent"
