--- a/app/src/main/res/layout/fragment_door.xml
+++ b/app/src/main/res/layout/fragment_door.xml
@@ -57,24 +57,27 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <View
+            android:id="@+id/view"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_marginTop="190dp"
+            android:layout_marginHorizontal="16dp"
+            android:background="@drawable/white_bottom_rounded_corner"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/status_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/white_back_rounded_corner"
             app:layout_constraintTop_toBottomOf="@+id/cam_video"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent">
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:background="@drawable/bottom_rounded_corner"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
