--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/app_background"
     android:gravity="center_horizontal"
+    android:id="@+id/main"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
