--- a/app/src/main/res/layout/door_item.xml
+++ b/app/src/main/res/layout/door_item.xml
@@ -26,10 +26,10 @@
                 android:id="@+id/roundedImageView"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:background="@drawable/rounded_corner"
+                android:background="@drawable/rounded_corner_rect"
                 android:contentDescription="@string/img_des"
                 android:scaleType="centerCrop"
-                android:src="@drawable/int_test"
+                android:src="@drawable/test_img"
                 app:layout_constraintBaseline_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -64,7 +64,7 @@
             android:layout_height="10dp"
             android:layout_marginTop="190dp"
             android:layout_marginHorizontal="16dp"
-            android:background="@drawable/white_bottom_rounded_corner"
+            android:background="@drawable/bottom_rounded_corner_rect"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -74,7 +74,7 @@
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/white_back_rounded_corner"
+            android:background="@drawable/rounded_corner_rect"
             app:layout_constraintTop_toBottomOf="@+id/cam_video"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent">
@@ -117,7 +117,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="24dp"
                 android:contentDescription="@string/img_des"
-                android:src="@drawable/lock_on"
+                android:src="@drawable/lock"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
