--- a/app/src/main/res/layout/fragment_intercom.xml
+++ b/app/src/main/res/layout/fragment_intercom.xml
@@ -7,7 +7,7 @@
     android:background="@color/app_background"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".IntercomFragment">
+    tools:context=".Fragments.IntercomFragment">
 
     <TextView
         android:layout_width="wrap_content"
