--- a/app/src/main/res/layout/door_item.xml
+++ b/app/src/main/res/layout/door_item.xml
@@ -1,11 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:id="@+id/door_layout"
+    android:id="@+id/swipe"
     android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     android:background="@color/app_background"
     android:gravity="center_horizontal">
+
+    <LinearLayout
+        android:id="@+id/bottom_wrapper"
+        android:layout_marginEnd="16dp"
+        android:layout_width="110dp"
+        android:layout_height="match_parent"
+        android:weightSum="2">
+
+        <ImageView
+            android:id="@+id/edit"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginStart="9dp"
+            android:contentDescription="@string/img_des"
+            android:src="@drawable/edit_pencil"
+            android:gravity="center"/>
+
+        <ImageView
+            android:id="@+id/star"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:contentDescription="@string/img_des"
+            android:layout_marginStart="9dp"
+            android:src="@drawable/favorite_button_disactivate"
+            android:gravity="center" />
+
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -72,8 +103,6 @@
             android:id="@+id/status_bar"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:background="@drawable/rounded_corner_rect"
             app:layout_constraintTop_toBottomOf="@+id/cam_video"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -125,4 +154,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</com.daimajia.swipe.SwipeLayout>
