--- a/app/src/main/res/layout/fragment_doors.xml
+++ b/app/src/main/res/layout/fragment_doors.xml
@@ -9,6 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"/>
+
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/empty"
+        android:visibility="gone"/>
 
 </LinearLayout>
