--- a/app/src/main/res/layout/door_item.xml
+++ b/app/src/main/res/layout/door_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/door_swipe"
     android:layout_width="match_parent"
-    android:id="@+id/swipe"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
@@ -10,7 +10,7 @@
     android:gravity="center_horizontal">
 
     <LinearLayout
-        android:id="@+id/bottom_wrapper"
+        android:id="@+id/left_swipe"
         android:layout_marginEnd="16dp"
         android:layout_width="110dp"
         android:layout_height="match_parent"
