--- a/app/src/main/res/layout/fragment_cameras.xml
+++ b/app/src/main/res/layout/fragment_cameras.xml
@@ -2,11 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:visibility="visible"
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -14,14 +12,11 @@
         android:scrollbars="vertical" />
 
     <TextView
-        android:visibility="gone"
-        android:id="@+id/error"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/text_color"
-        android:fontFamily="@font/circe_regular"
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/not_cameras"/>
+        android:text="@string/empty"
+        android:visibility="gone" />
 
 </LinearLayout>
