--- a/app/src/main/res/layout/fragment_intercom.xml
+++ b/app/src/main/res/layout/fragment_intercom.xml
@@ -35,10 +35,10 @@
             android:layout_height="24dp"
             android:layout_marginTop="9dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/eye"
             android:contentDescription="@string/img_des"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/visitors" />
+            android:src="@drawable/eye"
+            app:layout_constraintEnd_toStartOf="@+id/visitors"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/visitors"
@@ -47,19 +47,19 @@
             android:layout_marginTop="11dp"
             android:layout_marginEnd="16dp"
             android:contentDescription="@string/img_des"
-            android:text="@string/visitors"
             android:fontFamily="@font/circe_regular"
+            android:text="@string/visitors"
             android:textColor="@color/white"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:contentDescription="@string/img_des"
             android:id="@+id/rec_point"
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/img_des"
             android:src="@drawable/record_red_circle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -69,18 +69,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="11dp"
             android:contentDescription="@string/img_des"
-            android:text="@string/live_broadcast"
             android:fontFamily="@font/circe_regular"
+            android:text="@string/live_broadcast"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/rec_point" />
 
         <ImageView
-            android:contentDescription="@string/img_des"
             android:id="@+id/size_change_button"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_marginEnd="16dp"
+            android:contentDescription="@string/img_des"
             android:src="@drawable/change_video_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -95,18 +95,18 @@
             android:id="@+id/open_door_button"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:paddingTop="24dp"
-            android:paddingBottom="12dp"
-            android:fontFamily="@font/circe_regular"
-            android:textColor="@color/network_color"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="23dp"
             android:background="@drawable/rounded_corner_rect"
+            android:drawableTop="@drawable/key"
+            android:fontFamily="@font/circe_regular"
+            android:paddingTop="24dp"
+            android:paddingBottom="12dp"
             android:text="@string/open_door"
             android:textAllCaps="false"
-            android:drawableTop="@drawable/key"
+            android:textColor="@color/network_color"
             app:layout_constraintBottom_toTopOf="@+id/settings"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
         <LinearLayout
             android:id="@+id/settings"
@@ -129,8 +129,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:text="@string/settings"
                 android:fontFamily="@font/circe_regular"
+                android:text="@string/settings"
                 android:textColor="@color/settings_color"
                 android:textSize="17sp" />
 
@@ -138,25 +138,25 @@
 
         <ImageView
             android:id="@+id/back_button"
-            android:contentDescription="@string/img_des"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/back_button"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="30dp"
+            android:contentDescription="@string/img_des"
+            android:src="@drawable/back_button"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/crossed_out_eye_button"
-            android:contentDescription="@string/img_des"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="30dp"
+            android:contentDescription="@string/img_des"
             android:src="@drawable/crossed_out_eye"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
