--- a/app/src/main/res/layout/door_item.xml
+++ b/app/src/main/res/layout/door_item.xml
@@ -11,47 +11,47 @@
 
     <LinearLayout
         android:id="@+id/left_swipe"
-        android:layout_marginEnd="16dp"
         android:layout_width="110dp"
         android:layout_height="match_parent"
+        android:layout_marginEnd="16dp"
         android:weightSum="2">
 
         <ImageView
             android:id="@+id/edit"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:layout_marginStart="9dp"
+            android:layout_weight="1"
             android:contentDescription="@string/img_des"
-            android:src="@drawable/edit_pencil"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:src="@drawable/edit_pencil" />
 
         <ImageView
             android:id="@+id/star"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="9dp"
             android:layout_weight="1"
             android:contentDescription="@string/img_des"
-            android:layout_marginStart="9dp"
-            android:src="@drawable/favorite_button_disactivate"
-            android:gravity="center" />
+            android:gravity="center"
+            android:src="@drawable/favorite_button_disactivate" />
 
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="16dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cam_video"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/roundedImageView"
@@ -62,16 +62,16 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/test_img"
                 app:layout_constraintBaseline_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
                 android:id="@+id/favorite"
-                android:visibility="invisible"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:contentDescription="@string/img_des"
                 android:layout_margin="3dp"
+                android:contentDescription="@string/img_des"
                 android:src="@drawable/star"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -90,12 +90,12 @@
 
         <View
             android:id="@+id/view"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:layout_marginTop="190dp"
             android:layout_marginHorizontal="16dp"
-            android:background="@drawable/bottom_rounded_corner_rect"
+            android:layout_marginTop="190dp"
+            android:background="@color/white"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -103,10 +103,11 @@
             android:id="@+id/status_bar"
             android:layout_width="match_parent"
             android:layout_height="80dp"
+            android:layout_marginHorizontal="16dp"
             android:background="@drawable/rounded_corner_rect"
-            app:layout_constraintTop_toBottomOf="@+id/cam_video"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cam_video">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -128,14 +129,14 @@
                     android:textSize="17sp" />
 
                 <TextView
-                    android:visibility="invisible"
                     android:id="@+id/status_network"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/circe_regular"
                     android:text="@string/network"
                     android:textColor="@color/network_color"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
@@ -143,8 +144,8 @@
                 android:id="@+id/door_locker"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:layout_marginEnd="16dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
                 android:contentDescription="@string/img_des"
                 android:src="@drawable/lock"
                 app:layout_constraintEnd_toEndOf="parent"
