--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:id="@+id/bottomSheetContainer"
-    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="700dp"
     android:background="@color/app_background"
     android:gravity="center_horizontal"
-    android:layout_height="700dp">
+    android:orientation="vertical">
 
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="150dp"
-        android:background="@color/grand_blue"/>
+        android:background="@color/grand_blue" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="700dp"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:textColor="@color/text_color"
         android:fontFamily="@font/circe_regular"
-        android:text="@string/settings_des"/>
+        android:gravity="center"
+        android:text="@string/settings_des"
+        android:textColor="@color/text_color"
+        android:textSize="20dp" />
 
 </LinearLayout>
