--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,13 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/my_home"
+            android:id="@+id/myHome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/circe_regular"
-            android:text="@string/my_home"
+            android:text="@string/myHome"
             android:textColor="@color/headers_color"
             android:textSize="21sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <com.example.forexample.UI.CustomViewPager
-            android:id="@+id/view_pager"
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
