--- a/app/src/main/res/layout/cameras_item.xml
+++ b/app/src/main/res/layout/cameras_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cam_swipe"
+    android:id="@+id/camSwipe"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -10,7 +10,7 @@
     android:gravity="center_horizontal">
 
     <LinearLayout
-        android:id="@+id/left_swipe"
+        android:id="@+id/leftSwipe"
         android:layout_width="55dp"
         android:layout_height="match_parent"
         android:layout_marginEnd="16dp"
@@ -22,7 +22,6 @@
             android:layout_height="match_parent"
             android:layout_marginStart="9dp"
             android:layout_weight="1"
-            android:contentDescription="@string/img_des"
             android:gravity="center"
             android:src="@drawable/favorite_button_disactivate" />
 
@@ -40,7 +39,6 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="12dp"
             android:fontFamily="@font/circe_regular"
-            android:text="@string/room_name"
             android:textColor="@color/text_color"
             android:textSize="21sp"
             android:visibility="gone" />
@@ -56,7 +54,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
                 android:background="@drawable/rounded_corner_rect"
-                android:contentDescription="@string/img_des"
                 android:scaleType="centerCrop"
                 android:src="@drawable/test_img"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +64,6 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_margin="8dp"
-                android:contentDescription="@string/img_des"
                 android:src="@drawable/rec"
                 android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +74,6 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_margin="3dp"
-                android:contentDescription="@string/img_des"
                 android:src="@drawable/star"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +90,6 @@
                     android:id="@+id/play_button"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:contentDescription="@string/img_des"
                     android:src="@drawable/play_button" />
 
             </LinearLayout>
@@ -115,7 +109,6 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="24dp"
                 android:fontFamily="@font/circe_regular"
-                android:text="@string/cam_num"
                 android:textColor="@color/text_color"
                 android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="parent"
